Fix topic items positioning on mobile and desktop.

--- a/app/assets/stylesheets/pages/_diary.scss
+++ b/app/assets/stylesheets/pages/_diary.scss
@@ -35,6 +35,21 @@
     line-height: 1.75em;
     vertical-align: middle;
   }
+
+  &.mobile__day__navigation {
+    background: transparent;
+    border: 0;
+    padding: 0;
+  }
+}
+
+.event__cancelled,
+.event__published {
+  .mobile__day__navigation {
+    i.icon {
+      color: $white;
+    }
+  }
 }
 
 .hide-for-small {
@@ -63,10 +78,6 @@
   .icon {
     float: right;
   }
-}
-
-form .row.collapse.mobile__day__navigation {
-  margin: 0 -.675em;
 }
 
 .select__event__status {
@@ -234,6 +245,12 @@ form .row.collapse.mobile__day__navigation {
   border-bottom: 1px solid lighten($light-grey-color, 20%);
   clear: both;
 
+  &:after {
+    content: '';
+    clear: both;
+    display: block;
+  }
+
   &.done {
     background: lighten($light-grey-color, 21%);
 
@@ -258,17 +275,36 @@ form .row.collapse.mobile__day__navigation {
   .topic__item__description,
   .topic__item__actions,
   .topic__item__item__editing {
-    display: inline-block;
     vertical-align: middle;
   }
 
-  .topic__item__description,
+  .topic__item__handle,
+  .topic__item__image,
+  .topic__item__status__checkbox {
+    float: left;
+  }
+
+  .topic__item__status__checkbox {
+    margin: 0;
+    padding: .5em;
+  }
+
   .topic__item__show {
-    max-width: 62%;
+    margin-left: 3em;
   }
 
   .topic__item__description {
+    margin-left: 2.5em;
+    display: block;
     word-wrap: break-word;
+  }
+
+  .topic__item__description__contents {
+    display: block;
+
+    &.topic__contains__media {
+      margin-left: 3.5em;
+    }
   }
 
   .topic__item__status {
@@ -287,6 +323,7 @@ form .row.collapse.mobile__day__navigation {
     color: $light-grey-color;
     cursor: -webkit-grab;
     cursor: grab;
+    float: left;
     font-size: 1.5em;
     margin-bottom: -.25em;
     padding: 1em .5em;
@@ -294,13 +331,16 @@ form .row.collapse.mobile__day__navigation {
 
   &.ui-sortable-helper {
     .topic__item__handle {
+      cursor: -webkit-grabbing;
       cursor: grabbing;
     }
   }
 
   .topic__item__image {
     @include radius();
-    background-size: cover;
+    background: no-repeat center center;
+    background-size: contain;
+    display: inline-block;
     height: 2.75em;
     margin-right: .5em;
     vertical-align: middle;
@@ -323,6 +363,11 @@ form .row.collapse.mobile__day__navigation {
         @extend .create__new__topic__item;
       }
     }
+  }
+
+  .topic__item__contents {
+    margin-right: 3em;
+    padding: 1.5em 0;
   }
 
   .topic__item__actions {
@@ -489,6 +534,7 @@ form .row.collapse.mobile__day__navigation {
 .event__cancel__link {
   color: $red-color;
   font-size: .75em;
+  white-space: nowrap;
 }
 
 .event__status__group {
@@ -506,6 +552,7 @@ form .row.collapse.mobile__day__navigation {
   .button-group {
     display: inline-block;
     margin-left: .5em;
+    white-space: nowrap;
   }
 
   .event__status__button {
